k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: udc-bot-prod
  labels:
    app.kubernetes.io/part-of: udc-bot
    environment: prod
