k8s/prod/bot.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udc-bot
  namespace: udc-bot-prod
  labels:
    app.kubernetes.io/name: udc-bot
    app.kubernetes.io/part-of: udc-bot
    environment: prod
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: udc-bot
  template:
    metadata:
      labels:
        app.kubernetes.io/name: udc-bot
        app.kubernetes.io/part-of: udc-bot
        environment: prod
    spec:
      containers:
        - name: bot
          image: ghcr.io/unity-developer-community/udc-bot:6eb61dd
          volumeMounts:
            - name: app-settings
              mountPath: /app/Settings
            - name: server-data
              mountPath: /app/SERVER
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - DAC_OVERRIDE
      volumes:
        - name: config-template
          configMap:
            name: bot-config
        - name: rules-template
          configMap:
            name: bot-rules
        - name: faqs-template
          configMap:
            name: bot-faqs
        - name: usersettings-template
          configMap:
            name: bot-user-settings
        - name: slap-template
          configMap:
            name: bot-slap
        - name: app-settings
          emptyDir: {}
        - name: server-data
          persistentVolumeClaim:
            claimName: bot-server-data
