k8s/prod/pgadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: udc-bot-prod
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: udc-bot
    environment: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/part-of: udc-bot
        environment: prod
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:8
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /misc/ping
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: udc-bot-prod
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: udc-bot
    environment: prod
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: pgadmin
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: udc-bot-prod
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: udc-bot
    environment: prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-ip-allowlist@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.bot.udc.ovh
      secretName: pgadmin-prod-tls
  rules:
    - host: pgadmin.bot.udc.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
